--- a/templates/iocsearch.html
+++ b/templates/iocsearch.html
@@ -11,7 +11,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Victims</a>
+      <a class="navbar-brand" href="#">消息列表</a>
     </div>
     {% include "userdropdown.html" %}
   </div>
@@ -32,22 +32,22 @@
                 <div style="margin-top:60px" class="content table-responsive table-full-width">
                   <table class="table table-hover table-striped">
                     <thead>
-                      <th>Name</th>
-                      <th>Date</th>
-                      <th>Ioc Type</th>
-                      <th>Ioc</th>
-                      <th>Page</th>
-                      <th>Tags</th>
+                      <th width="30px">标题</th>
+                      <th width="30px">Ioc 种类</th>
+                      <th width="30px">Ioc</th>
+                      <th width="30px">ioc页码</th>
+                      <th width="30px">标签</th>
+                      <th width="30px">ioc来源</th>
                     </thead>
                     <tbody>
-                        {% for i in iocs %}
+                        {% for ioc in iocs %}
                         <tr>
-                            <td>{{ i.name }}</td>
-                            <td>{{ i.date }}</td>
-                            <td>{{ i.ioc_type }}</td>
-                            <td>{{ i.ioc_match }}</td>
-                            <td>{{ i.ioc_page }}</td>
-                            <td></td>
+                            <td style="max-width: 300px;overflow: hidden; text-overflow:ellipsis">{{ ioc.name }}</td>
+                            <td style="max-width: 100px;overflow: hidden; text-overflow:ellipsis">{{ ioc.ioc_type }}</td>
+                            <td style="max-width: 300px;overflow: hidden; text-overflow:ellipsis">{{ ioc.ioc_match }}</td>
+                            <td style="max-width: 300px;overflow: hidden; text-overflow:ellipsis">{{ ioc.ioc_page }}</td>
+                            <td style="max-width: 300px;overflow: hidden; text-overflow:ellipsis">{{ ioc.tag }}</td>
+                            <td style="max-width: 300px;overflow: hidden; text-overflow:ellipsis"><a href="{{ ioc.ioc_oriurl }}" target="_blank">原网页</a></td>
                         </tr>
                         {% endfor%}
                     </tbody>
