--- a/templates/iocsearch.html
+++ b/templates/iocsearch.html
@@ -33,21 +33,23 @@
                   <table id="table_1" name="table_1" class="table table-hover table-striped">
                     <thead>
                       <th width="30px">标题</th>
+                      <th width="30px">日期</th>
                       <th width="30px">Ioc 种类</th>
                       <th width="30px">Ioc</th>
                       <th width="30px">ioc页码</th>
-                      <th width="30px">标签</th>
+                      <th width="30px">rss源</th>
                       <th width="30px">ioc来源</th>
                     </thead>
                     <tbody>
                         {% for ioc in iocs %}
                         <tr>
                             <td style="max-width: 300px;overflow: hidden; text-overflow:ellipsis">{{ ioc.name }}</td>
+                            <td style="max-width: 300px;overflow: hidden; text-overflow:ellipsis">{{ ioc.date }}</td>
                             <td style="max-width: 100px;overflow: hidden; text-overflow:ellipsis">{{ ioc.ioc_type }}</td>
                             <td style="max-width: 300px;overflow: hidden; text-overflow:ellipsis">{{ ioc.ioc_match }}</td>
-                            <td style="max-width: 300px;overflow: hidden; text-overflow:ellipsis">{{ ioc.ioc_page }}</td>
-                            <td style="max-width: 300px;overflow: hidden; text-overflow:ellipsis">{{ ioc.tag }}</td>
-                            <td style="max-width: 300px;overflow: hidden; text-overflow:ellipsis"><a href="{{ ioc.ioc_oriurl }}" target="_blank">原网页</a></td>
+                            <td style="max-width: 100px;overflow: hidden; text-overflow:ellipsis">{{ ioc.ioc_page }}</td>
+                            <td style="max-width: 200px;overflow: hidden; text-overflow:ellipsis">{{ ioc.ioc_rss }}</td>
+                            <td style="max-width: 100px;overflow: hidden; text-overflow:ellipsis"><a href="{{ ioc.ioc_oriurl }}" target="_blank">原网页</a></td>
                         </tr>
                         {% endfor%}
                     </tbody>
