--- a/templates/keyfilter.html
+++ b/templates/keyfilter.html
@@ -67,5 +67,55 @@
 
       {% include "footer.html" %}
       </div>
+        <script>
+    function goPage(pno,tableid,barconid) {
+        var itable = document.getElementById(tableid);
+        var num = itable.rows.length;//表格所有行数(所有记录数)
+        var totalPage = 0;//总页数
+        var pageSize = 10;//每页显示行数
+        //总共分几页
+        if(num/pageSize > parseInt(num/pageSize)){
+                totalPage=parseInt(num/pageSize)+1;
+           }else{
+               totalPage=parseInt(num/pageSize);
+           }
+        var currentPage = pno;//当前页数
+        var startRow = (currentPage - 1) * pageSize+1;//开始显示的行  31
+           var endRow = currentPage * pageSize;//结束显示的行   40
+           endRow = (endRow > num)? num : endRow;
+           //遍历显示数据实现分页
+        for(var i=1;i<(num+1);i++){
+            var irow = itable.rows[i-1];
+            if(i>=startRow && i<=endRow){
+                irow.style.display = "";
+            }else{
+                irow.style.display = "none";
+            }
+        }
+        itable.rows[0].style.display = "";
+        var tempStr = "<ul class=\"pager\">"
+        tempStr += "共"+num+"条记录 分"+totalPage+"页 当前第"+currentPage+"页";
+        if(currentPage>1){
+            tempStr += "<li><a href=\"#\" onClick=\"goPage("+(1)+",\'"+tableid+"\',\'"+barconid+"\')\">首页</a></li>";
+            tempStr += "<li><a href=\"#\" onClick=\"goPage("+(currentPage-1)+",\'"+tableid+"\',\'"+barconid+"\')\"><上一页</a></li>";
+        }else{
+            tempStr += "<li><a href=\"#\" disable>首页</a></li>";
+            tempStr += "<li><a href=\"#\" disable><上一页</a></li>";
+        }
+
+        if(currentPage<totalPage){
+            tempStr += "<li><a href=\"#\" onClick=\"goPage("+(currentPage+1)+",\'"+tableid+"\',\'"+barconid+"\')\">下一页></a></li>";
+            tempStr += "<li><a href=\"#\" onClick=\"goPage("+(totalPage)+",\'"+tableid+"\',\'"+barconid+"\')\">尾页</a></li>";
+        }else{
+            tempStr += "<li><a href=\"#\" disable>下一页></a></li>";
+            tempStr += "<li><a href=\"#\" disable>尾页</a></li>";
+        }
+        tempStr+="</ul>"
+        document.getElementById(barconid).innerHTML = tempStr;
+        }
+    goPage(1,'table_1','barcon1');
+
+    </script>
+
       </div>
       {% endblock content %}
