--- a/templates/newlist.html
+++ b/templates/newlist.html
@@ -47,6 +47,7 @@
                       <th width="100px">标题</th>
                       <th width="100px">RSS来源</th>
                       <th width="50px">标签</th>
+                      <th width="50px">本地快照</th>
                       <th width="50px">详情</th>
                     </thead>
                     <tbody>
@@ -69,7 +70,11 @@
                             <td>{{ i.title }}</td>
                             <td>{{ i.rssname }}</td>
                             <td>{{ i.tags }}</td>
-
+                            {% if i.filedir == '' %}
+                                <td>暂无快照</td>
+                            {% else %}
+                                <td><a href="javascript:void(0);" onclick="updatenews('{{ i.filedir }}')">阅读</a></td>
+                            {% endif %}
                             <td><a href="javascript:void(0);" onclick="updatenews('{{ i.link }}','{{ i.id }}')">查看</a></td>
                         </tr>
                         {% endfor%}
@@ -97,7 +102,8 @@
                       <th width="100px">标题</th>
                       <th width="100px">RSS来源</th>
                       <th width="50px">标签</th>
-                      <th width="50px">详情</th>
+                      <th width="50px">本地快照</th>
+                      <th width="50px">原网页</th>
                     </thead>
                     <tbody>
                         {% for i in allmessages %}
@@ -119,7 +125,11 @@
                             <td>{{ i.title }}</td>
                             <td>{{ i.rssname }}</td>
                             <td>{{ i.tags }}</td>
-                            <td><a href="javascript:void(0);" onclick="updatenews('{{ i.link }}','{{ i.id }}')">查看</a></td>
+                            {% if i.filedir == '' %}
+                                <td>暂无快照</td>
+                            {% else %}
+                                <td><a href="javascript:void(0);" onclick="updatenews('{{ i.filedir }}')">阅读</a></td>
+                            {% endif %}                            <td><a href="javascript:void(0);" onclick="updatenews('{{ i.link }}','{{ i.id }}')">查看</a></td>
                         </tr>
                         {% endfor%}
                     </tbody>
@@ -137,6 +147,9 @@
       </div>
     </div>
     <script type="text/javascript">
+    function seepdf(data) {
+        window.open(data);
+    }
     function updatenews(data,id)
     {
         xmlhttp = new XMLHttpRequest();
