--- a/templates/rsslist.html
+++ b/templates/rsslist.html
@@ -35,13 +35,13 @@
 
                 </div>
 
-                <div style="margin-top:60px" class="content table-responsive">
-                  <table id="table_1" style="table-layout: fixed;" class="table table-hover table-striped">
+                <div style="margin-top:60px" class="content table-responsive  table-full-width">
+                  <table id="table_1" style="table-layout:fixed;" class="table table-hover table-striped">
                     <thead>
                       <th width="50px">序号</th>
-                      <th width="300px">名字</th>
-                      <th width="300px">别称</th>
-                      <th>链接</th>
+                      <th width="200px">名字</th>
+                      <th width="200px">别称</th>
+                      <th width="200px">链接</th>
                       <th width="50px" style="float: right;">修改</th>
                     </thead>
                     <tbody>
@@ -49,10 +49,10 @@
                       <tr>
                         <tr>
                         <td width="100px">{{ i.id }}</td>
-                        <td width="100px">{{ i.text }}</td>
-                        <td width="100px">{{ i.othername }}</td>
-                        <td style="white-space:nowrap;overflow:hidden;text-overflow: ellipsis;">{{ i.url }}</td>
-                        <td class="td-actions text-right">
+                        <td width="100px" style="word-wrap:break-word;word-break:break-all;">{{ i.text }}</td>
+                        <td width="100px" style="word-wrap:break-word;word-break:break-all;">{{ i.othername }}</td>
+                        <td style="white-space:nowrap;overflow:hidden;text-overflow: ellipsis;word-wrap:break-word;word-break:break-all;">{{ i.url }}</td>
+                        <td class="td-actions text-right" style="word-wrap:break-word;word-break:break-all;">
                                 <a href="/toeditrss?id={{ i.id }}" role="button" rel="tooltip" title="Edit Indicator" class="btn btn-info btn-simple btn-xs">
                                     <i class="fa fa-pencil"></i>
                                 </a>
