--- a/templates/rsslist.html
+++ b/templates/rsslist.html
@@ -38,21 +38,21 @@
                 <div style="margin-top:60px" class="content table-responsive  table-full-width">
                   <table id="table_1" style="table-layout:fixed;" class="table table-hover table-striped">
                     <thead>
-                      <th width="50px">序号</th>
-                      <th width="200px">名字</th>
-                      <th width="200px">别称</th>
-                      <th width="200px">链接</th>
-                      <th width="50px" style="float: right;">修改</th>
+                      <th width="10%">序号</th>
+                      <th width="20%">名字</th>
+                      <th width="20%" >别称</th>
+                      <th width="45%">链接</th>
+                      <th width="5%" style="float: right;">修改</th>
                     </thead>
                     <tbody>
                       {% for i in rsslist %}
                       <tr>
                         <tr>
-                        <td width="100px">{{ i.id }}</td>
-                        <td width="100px" style="word-wrap:break-word;word-break:break-all;">{{ i.text }}</td>
-                        <td width="100px" style="word-wrap:break-word;word-break:break-all;">{{ i.othername }}</td>
-                        <td style="white-space:nowrap;overflow:hidden;text-overflow: ellipsis;word-wrap:break-word;word-break:break-all;">{{ i.url }}</td>
-                        <td class="td-actions text-right" style="word-wrap:break-word;word-break:break-all;">
+                        <td >{{ i.id }}</td>
+                        <td  style="word-wrap:break-word;word-break:break-all;">{{ i.text }}</td>
+                        <td style="word-wrap:break-word;word-break:break-all;">{{ i.othername }}</td>
+                        <td  style="white-space:nowrap;overflow:hidden;text-overflow: ellipsis;word-wrap:break-word;word-break:break-all;">{{ i.url }}</td>
+                        <td  class="td-actions text-right" style="word-wrap:break-word;word-break:break-all;">
                                 <a href="/toeditrss?id={{ i.id }}" role="button" rel="tooltip" title="Edit Indicator" class="btn btn-info btn-simple btn-xs">
                                     <i class="fa fa-pencil"></i>
                                 </a>
