提交主页面中的统计

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -56,6 +56,84 @@
                                     </div>
                             </form>
                         </div>
+
+
+                </div>
+                <div class="row tm_row" style="margin-top: 50px;margin-left: 50px;margin-right: 50px">
+                    <div id="indicators_panel">
+                        <div class="col-lg-3 col-md-6">
+                            <div class="panel panel-info">
+                                <div class="panel-heading">
+                                    <div class="row">
+                                        <div class="col-xs-3">
+                                            <i class="fa fa-rebel fa-5x"></i>
+                                        </div>
+                                        <div class="col-xs-9 text-right">
+                                            <div style="font-size: 1.5em">
+
+                                                {{ hashcount }}
+                                            </div>
+                                            <div>散列值</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <div class="row">
+                                        <div class="col-xs-3">
+                                            <i class="fa fa-sitemap fa-5x"></i>
+                                        </div>
+                                        <div class="col-xs-9 text-right">
+                                            <div style="font-size: 1.5em">
+
+                                                {{ urlcount }}
+                                            </div>
+                                            <div>网址</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="panel panel-info">
+                                <div class="panel-heading">
+                                    <div class="row">
+                                        <div class="col-xs-3">
+                                            <i class="fa fa-desktop fa-5x"></i>
+                                        </div>
+                                        <div class="col-xs-9 text-right">
+                                            <div style="font-size: 1.5em">
+
+                                                {{ hostcount }}
+                                            </div>
+                                            <div>主机</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <div class="row">
+                                        <div class="col-xs-3">
+                                            <i class="fa fa-envelope fa-5x"></i>
+                                        </div>
+                                        <div class="col-xs-9 text-right">
+                                            <div style="font-size: 1.5em">
+
+                                                {{ filecount }}
+                                            </div>
+                                            <div>文件</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
         </div>
       </div>
