--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -66,7 +66,7 @@
                                 <div class="panel-heading">
                                     <div class="row">
                                         <div class="col-xs-3">
-                                            <i class="fa fa-rebel fa-5x"></i>
+                                            <img style="width: 150%;height: 150%" src="/static/img/hash.png">
                                         </div>
                                         <div class="col-xs-9 text-right">
                                             <div style="font-size: 1.5em">
@@ -84,7 +84,7 @@
                                 <div class="panel-heading">
                                     <div class="row">
                                         <div class="col-xs-3">
-                                            <i class="fa fa-sitemap fa-5x"></i>
+                                            <img style="width: 150%;height: 150%" src="/static/img/url.png">
                                         </div>
                                         <div class="col-xs-9 text-right">
                                             <div style="font-size: 1.5em">
@@ -102,14 +102,14 @@
                                 <div class="panel-heading">
                                     <div class="row">
                                         <div class="col-xs-3">
-                                            <i class="fa fa-desktop fa-5x"></i>
+                                            <img style="width: 150%;height: 150%" src="/static/img/ip.png">
                                         </div>
                                         <div class="col-xs-9 text-right">
                                             <div style="font-size: 1.5em">
 
                                                 {{ hostcount }}
                                             </div>
-                                            <div>主机</div>
+                                            <div>IP</div>
                                         </div>
                                     </div>
                                 </div>
@@ -120,14 +120,14 @@
                                 <div class="panel-heading">
                                     <div class="row">
                                         <div class="col-xs-3">
-                                            <i class="fa fa-envelope fa-5x"></i>
+                                            <img style="width: 130%;height: 120%" src="/static/img/file.png">
                                         </div>
                                         <div class="col-xs-9 text-right">
                                             <div style="font-size: 1.5em">
 
                                                 {{ filecount }}
                                             </div>
-                                            <div>文件</div>
+                                            <div>文件名</div>
                                         </div>
                                     </div>
                                 </div>
